--- a/package.json
+++ b/package.json
@@ -16,18 +16,24 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
-    "mongoose": "^8.19.3",
+    "lucide-react": "^0.555.0",
+    "mongodb": "^5.9.2",
+    "mongoose": "^8.20.1",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "stripe": "^19.3.0",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
     "@types/prop-types": "^15.7.15",
