--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.20.1",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
+    "primeicons": "^7.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
